--- a/Proyecto3/nbproject/project.properties
+++ b/Proyecto3/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jgraphx.jar=..\\..\\..\\..\\..\\Program Files\\NetBeans 8.1\\jgraphx\\lib\\jgraphx.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jgraphx.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
