--- a/Proyecto3/nbproject/project.properties
+++ b/Proyecto3/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.jgraphx.jar=..\\..\\..\\..\\..\\Program Files\\NetBeans 8.1\\jgra
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jgraphx.jar}
+    ${file.reference.jgraphx.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
